--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   pusher_client: ^2.0.0
   laravel_echo: ^1.0.0-beta.1
   fluttertoast: ^8.2.4
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
